<resources>

    <!-- Name for the application -->
    <string name="app_name">Can I Borrow</string>

    <!-- Label for overflow menu option that deletes all pet data in the app -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Title for the activity to add a new item -->
    <string name="editor_activity_title_new_item">Add An Item</string>

    <!-- Label for editor menu option to save item and leave editor -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item-->
    <string name="action_delete">Delete</string>

    <!-- Label for item category of attributes in the editor -->
    <string name="category_item">Item</string>

    <!-- Label for borrower name category of attributes in the editor -->
    <string name="category_borrower">Borrowed By</string>

    <!-- Label for date information in the editor -->
    <string name="category_date">To Be Returned</string>

    <!-- Label for image information in the editor -->
    <string name="category_Image">Image</string>

    <!-- Text hint for item name field in the editor -->
    <string name="hint_item_name">Name</string>

    <!-- Text hint for borrower field in the editor -->
    <string name="hint_borrower_name">Who</string>

    <!-- Text for empty field in the catalog activity -->
    <string name="empty_view_title_text">No items being lent</string>

    <!-- Text for empty field in the catalog activity -->
    <string name="empty_view_subtitle_text">You have all your stuff!</string>

    <!-- Fail to save message -->
    <string name="editor_insert_item_failed">Failed to save item</string>

    <!-- Successful save message-->
    <string name="editor_insert_item_successful">Saved</string>
    <string name="editor_activity_title_add_item">Add Item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>
    <string name="editor_update_item_failed">Failed to update</string>
    <string name="editor_update_item_successful">Updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_item_failed">Error deleting item</string>
    <string name="editor_delete_item_successful">Item deleted</string>

</resources>
